--- a/ReadPaper/2023AIGC.md
+++ b/ReadPaper/2023AIGC.md
@@ -1,3 +1,21 @@
 # AIGC
 
 text-3d
+
+**DreamBooth**: 基于stable diffusion的finetune 方法，只需要少量图片和对应的标签，就能够finetune出该对象相关的图片。
+
+
+
+
+
+## Generative Novel View Synthesis with 3D-Aware Diffusion Models （2023April NVIDIA&Stanford）
+
+基于diffusion 模型的三维视角生成。主要创新在基于现有的2d 扩散框架下加入了三维的feature volume。latent feature可以有效提高生成一致性图像的能力。
+
+
+
+related work的分析：有两种方法：一种是基于geometry的方法，比如nerf之类的。他们只能做好相邻视角的，对于更远的话就很模糊了。另一种方法是基于生成式的方法，他们能够生成比较好的细节，但是生成的不一定和输入的图片一致。
+
+方法上其实比较接近pixelnerf，也是对每个volume都设计一个feature学习，只是把这个feature和noise图片concate一起后传入一个diffusion model，然后得到最终的效果。
+
+重点是有了一个显式的三维表示然后加上了diffusion的方法。
