--- a/ReadPaper/2022NeRF.md
+++ b/ReadPaper/2022NeRF.md
@@ -321,3 +321,35 @@ inspiration：根据现有的视角来生成伪标签。伪标签包括两个类
 同样我们将不可见的场景反向到reference的视角下来鼓励geometry的连续性
 
 第二部分：语义label。不同视角下的纹理可能不是连续的，image warping只能投影深度信息，因此还需要加入语义伪标签来regularize学习的appearance representation。这个标签只能作用在2d的图片区域，因此设计了一个基于对抗学习的local texture gudiance和基于pretrain ViT的global structure prior。
+
+## 3D Gaussian Splatting for Real-Time Radiance Field Rendering （实时nerf相关）
+
+加速的同时保持质量
+
+三个key：1. 用3d 高斯来保持连续的volumetric radiance fields，同时避免空旷位置的计算开销。2我们对3D高斯进行交错优化/密度控制，特别是优化各向异性协方差以实现场景的准确表示 3. 发明一个快速的visibility-aware rendering 算法来支持各向异性splatting来加速。
+
+先利用sfm生成相机参数和对应的稀疏点云作为输入。稀疏点云用于生成一系列的三维高斯。三维高斯用position， covariance matrix和opacity来定义。我们要做的就是优化这个三维高斯，这个radiance的颜色用SH来表示。
+
+Sec4 介绍怎么用系数点云生成一系列初始化的三维高斯。
+
+假设都是椭圆，利用scale matrix和rotation matrix，可以找对应得covariance matrix
+
+Sec5 介绍怎么优化这个三维高斯来优化这个场景的radiance。随机梯度下降来优化。每100iteration就增加三维高斯并且去掉一些透明的。去掉就是看阈值，增加得情况有两种：under-reconstruct (高斯不够覆盖不了)，over-reconstruct(高斯太大，表达不够精细，需要一分为二)
+
+Sec6 针对高斯的快速可微rasterizer
+
+## FreeNeRF: Improving Few-shot Neural Rendering with Free Frequency Regularization （CVPR2023）
+
+认为少样本下容易overfitting导致效果不好。然后发现高频信息可以帮助快速收敛，但是会导致不想好的一些高频artifacts，在少样本的情景下，不容易学几何，nerf容易对这些高频的信息敏感。
+
+如何解释？empirical evidence。做实验证明了。但是低频下的表面是oversmooth的。
+
+基于上述的实验，提出frequency regularization method
+
+其实就是随着训练轮次的增加，增加学习的frequency的频率
+
+occlusion regularization：分析原因：出现的floater经常是在靠近相机的，因此提出一个loss，对一根光线上的ray，随着距离的从近到源，对loss的权重会降低。也就是靠近相机的采样点对loss影响最大，使得预测出来的不会靠近相机。
+
+## Single-Stage Diffusion NeRF: A Unified Approach to 3D Generation and Reconstruction （SSDNeRF 2023.4）
+
+使用diffusion model来学习nerf的泛化先验。之前的方法都是先预训练好nerf，然后去训练diffusion model 和之前的方法不一样的是这里的方法是单步执行的。
