--- a/ReadPaper/2023AIGC.md
+++ b/ReadPaper/2023AIGC.md
@@ -29,3 +29,13 @@ related work的分析：有两种方法：一种是基于geometry的方法，比
 ## Dream3D: Zero-Shot Text-to-3D Synthesis Using 3D Shape Prior and Text-to-Image Diffusion Models（CVPR2023）
 
 ## SKED: Sketch-guided Text-based 3D Editing
+
+## NeRDi: Single-View NeRF Synthesis with Language-Guided Diffusion as General Image Priors (CVPR2023)
+
+## ProlificDreamer: High-Fidelity and Diverse Text-to-3D Generation with Variational Score Distillation (2023.5)
+
+Score distillation sampling是text-to-3d中用来提炼预训练的diffusion model，但是这些SDS导致 over saturation， over smooth 和low diversity problem。因此提出variational score distillationn（VSD）
+
+## DiffRoom: Diffusion-based High-Quality 3D Room Reconstruction and Generation with Occupancy Prior （2023.6 ）
+
+之前的diffusion还没做过重建。因此这个论文提出了给定一个稀疏的occupancy prior来基于diffusion model重建的方法。这个方法是基于TSDF（Truncated Signed Distance Field）的。
